--- a/blog-list-1.html
+++ b/blog-list-1.html
@@ -104,18 +104,20 @@
                     <div class="col-lg-4 col-md-4 col-sm-4 re4-mt-50">
                         <div class="iq-blog-box">
                             <div class="iq-blog-image clearfix">
-                                <img class="img-fluid center-block" src="images/blog/blog-list/7-Awesome-and-Free-AI-Tools-You-Should-Know.png" alt="#">
+                                <a href="7-awesome-and-free-ai-tools-you-should-know.html">
+                                    <img class="img-fluid center-block" src="images/blog/blog-list/7-Awesome-and-Free-AI-Tools-You-Should-Know.png" alt="#">
+                                </a>
                             </div>
                             <div class="iq-blog-detail">
-                                <div class="blog-title"> <a href="7-Awesome-and-Free-AI-Tools-You-Should-Know.html"><h5 class="iq-tw-6 iq-mb-10">7 Awesome and Free AI Tools You Should Know.</h5> </a> </div>
+                                <div class="blog-title"> <a href="7-awesome-and-free-ai-tools-you-should-know.html"><h5 class="iq-tw-6 iq-mb-10">7 Awesome and Free AI Tools You Should Know.</h5> </a> </div>
                                 <div class="blog-content">
-                                    <a href="7-Awesome-and-Free-AI-Tools-You-Should-Know.html">
+                                    <a href="7-awesome-and-free-ai-tools-you-should-know.html">
                                     <p>Discover 7 powerful AI tools you can use for free to boost productivity, creativity, and everyday tasks—don’t miss these game-changers !</p>
                                 </a>
                                 </div>
                                 <div class="iq-blog-meta">
                                     <ul class="list-inline">
-                                        <li class="list-inline-item"><a href="https://jeetendrasahu.in/">
+                                        <li class="list-inline-item"><a href="https://jeetendrasahu.in/" target="_blank">
                                             <i class="fa fa-user-circle" aria-hidden="true"></i> Jitendra Sahu</a></li>
                                         <li class="list-inline-item"><a href="#"><i class="fa fa-thumbs-up" aria-hidden="true"></i> 332</a></li>
                                         <li class="list-inline-item"><a href="#"><i class="fa fa-comment-o" aria-hidden="true"></i> 79</a></li>
