--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                     <a class="nav-link" href="#team">Team</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#blog">Blog</a>
+                                    <a class="nav-link" href="blog-list-1.html">Blog</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#contact-us">Contact</a>
